--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,16 @@
     <!--<header-dir></header-dir>-->
     <header class="main_header">
         <ul class="nav_links">
-            <div>All Rovers</div>
-            <div>Curiosity</div>
-            <div>Opportunity</div>
+            <div ui-sref="home"><span>Home</span></div>
+            <div ui-sref="curiosity"><span>Curiosity</span></div>
+            <div ui-sref="opportunity"><span>Opportunity</span></div>
+            <div ui-sref="weather"><span>Weather</span></div>
         </ul>
     </header>
 
-    <div class="content">
+    <ui-view></ui-view>
+    <mars-dir></mars-dir>
+    <!--<div class="content">
         <div>
             <div class="img_cntnr" ng-repeat="photo in photos">
                 <h3>{{photo.rover.name}}: {{photo.earth_date}}</h3>
@@ -29,9 +32,8 @@
             </div>
 
         </div>
-    </div>
+    </div>-->
 
-    <mars-dir></mars-dir>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
