--- a/public/app/routes/curiosity/curiosityTemplate.html
+++ b/public/app/routes/curiosity/curiosityTemplate.html
@@ -1,3 +1,14 @@
 <div>
     <h2>Curiosity</h2>
+
+    <div class="content">
+        <div>
+            <div class="img_cntnr" ng-repeat="photo in photos">
+                <h3>{{photo.rover.name}}: {{photo.earth_date}}</h3>
+                <img class="rvr_img" ng-src="{{photo.img_src}}" alt="">
+                <hr>
+            </div>
+
+        </div>
+    </div>
 </div>
