--- a/public/app/routes/home/homeTemplate.html
+++ b/public/app/routes/home/homeTemplate.html
@@ -5,9 +5,8 @@
     <div class="content">
         <div>
             <div class="img_cntnr" ng-repeat="photo in photos">
-                <h3>{{photo.rover.name}}: {{photo.earth_date}}</h3>
+                <!--<h3>{{photo.rover.name}}: {{photo.earth_date}}</h3>-->
                 <img class="rvr_img" ng-src="{{photo.img_src}}" alt="">
-                <hr>
             </div>
 
         </div>
