--- a/app/routes/weather/weatherTemplate.html
+++ b/app/routes/weather/weatherTemplate.html
@@ -1,4 +1,6 @@
 <h3>Current weather conditions on Mars:</h3>
+
+<h4 style="color: red">{{weatherError}}</h4>
 <div class="weather_info">
     <div>
         <img class="weather_graphic" src="./app/images/sunny.svg" alt="">
