--- a/app/routes/home/homeTemplate.html
+++ b/app/routes/home/homeTemplate.html
@@ -1,7 +1,7 @@
 <div>
     <h1>Welcome!</h1>
     <h3>Recent pictures from the Mars Rover, Curiosity:</h3>
-    <h4>{{imageError}}</h4>
+    <h4 style="color:red">{{imageError}}</h4>
     <div class="content">
         <div>
             <div class="img_cntnr" ng-repeat="photo in photos">
